hard-gists/5679049/run.log
=== Docker Run Log for 5679049 ===
Started at: Mi 29. Okt 15:53:16 CET 2025

[2025-10-29 15:53:16] START: Running container for 5679049
[2025-10-29 15:53:16] SUCCESS: Container 2c33d8bba323ffb0b4023600a9835824dcf879745f3bd0d99812ced26f426af9 started for 5679049
=== Container logs for 5679049 ===
  File "/snippet.py", line 10
    print api.GetUTF8Text()
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5679049 ===
[2025-10-29 15:53:18] INFO: Container 2c33d8bba323ffb0b4023600a9835824dcf879745f3bd0d99812ced26f426af9 has stopped
